--- a/package.json
+++ b/package.json
@@ -25,8 +25,12 @@
   "homepage": "https://github.com/fabio-looker/node-lookml-parser#readme",
   "dependencies": {
     "bluebird": "^3.5.1",
+    "deep-object-diff": "^1.1.0",
     "glob": "^7.1.2",
     "minimist": "^1.2.0",
     "pegjs": "^0.10.0"
+  },
+  "devDependencies": {
+    "test-runner": "^0.5.0"
   }
 }
