--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Parse LookML",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node parse/tests && node parse-files/tests"
   },
   "bin": {
     "lookml-parser": "./cli.js"
