Update LICENSE name in package.json

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "LookML"
   ],
   "author": "Fabio Beltramini",
-  "license": "UNLICENSED",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/fabio-looker/node-lookml-parser/issues"
   },
