--- a/package.json
+++ b/package.json
@@ -29,6 +29,14 @@
     "minimist": "^1.2.0",
     "pegjs": "^0.10.0"
   },
+  "peerDependencies": {
+    "js-yaml": "^4.1.0"
+  },
+  "peerDependenciesMeta": {
+    "js-yaml": {
+      "optional": true
+    }
+  },
   "devDependencies": {
     "test-runner": "^0.5.0"
   }
