--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lookml-parser",
-  "version": "7.0.0-0",
+  "version": "7.0.0",
   "description": "Parse LookML",
   "main": "index.js",
   "scripts": {
